// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches collapsed snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 2rem 1rem;
  margin: 0;
  border-radius: 5px;
  background-color: var(--background-card);
}

.c4 {
  margin: 0;
  padding: 0;
  color: var(--text-primary);
  font-size: 1.8rem;
}

.c5 {
  border-radius: 50%;
  display: block;
  margin-left: 0.5rem;
  font-size: 1.2rem;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding-top: 1rem;
}

.c3 {
  background: none;
  cursor: pointer;
  outline: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
}

.c0 .c1 {
  z-index: 1000;
  position: absolute;
  min-width: 400px;
  max-height: 70vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  top: 10px;
  left: 10px;
  -webkit-transition: -webkit-transform 1s ease,top 1s ease,left 1s ease;
  -webkit-transition: transform 1s ease,top 1s ease,left 1s ease;
  transition: transform 1s ease,top 1s ease,left 1s ease;
  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
}

.c0 .c6 {
  -webkit-scrollbar-width: 0;
  -moz-scrollbar-width: 0;
  -ms-scrollbar-width: 0;
  scrollbar-width: 0;
  -ms-overflow-style: none;
}

.c0 .c6::-webkit-scrollbar {
  display: none;
}

@media screen and (max-width:450px) {
  .c2 {
    padding: 1rem;
  }
}

@media screen and (max-width:450px) {
  .c0 .c1 {
    min-width: unset;
    top: 10px;
    left: 10px;
    right: 10px;
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
  }
}

<div
    class="c0"
    title="some title"
  >
    <div
      class="c1 c2"
    >
      <button
        aria-label="toggle menu expanded"
        class="c3"
      >
        <h2
          class="c4"
        >
          some title
        </h2>
        <span
          class="c5"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 2rem 1rem;
  margin: 0;
  border-radius: 5px;
  background-color: var(--background-card);
}

.c4 {
  margin: 0;
  padding: 0;
  color: var(--text-primary);
  font-size: 1.8rem;
}

.c5 {
  border-radius: 50%;
  display: block;
  margin-left: 0.5rem;
  font-size: 1.2rem;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding-top: 1rem;
}

.c3 {
  background: none;
  cursor: pointer;
  outline: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
}

.c0 .c1 {
  z-index: 1000;
  position: absolute;
  min-width: 400px;
  max-height: 70vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  -webkit-transition: -webkit-transform 1s ease,top 1s ease,left 1s ease;
  -webkit-transition: transform 1s ease,top 1s ease,left 1s ease;
  transition: transform 1s ease,top 1s ease,left 1s ease;
  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
}

.c0 .c6 {
  -webkit-scrollbar-width: 0;
  -moz-scrollbar-width: 0;
  -ms-scrollbar-width: 0;
  scrollbar-width: 0;
  -ms-overflow-style: none;
}

.c0 .c6::-webkit-scrollbar {
  display: none;
}

@media screen and (max-width:450px) {
  .c2 {
    padding: 1rem;
  }
}

@media screen and (max-width:450px) {
  .c0 .c1 {
    min-width: unset;
    top: 10px;
    left: 10px;
    right: 10px;
    -webkit-transform: unset;
    -ms-transform: unset;
    transform: unset;
  }
}

<div
    class="c0"
    title="some title"
  >
    <div
      class="c1 c2"
    >
      <button
        aria-label="toggle menu expanded"
        class="c3"
      >
        <h2
          class="c4"
        >
          some title
        </h2>
        <span
          class="c5"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
            />
          </svg>
        </span>
      </button>
      <div
        class="c6 c7"
      />
    </div>
  </div>
</DocumentFragment>
`;
